# Personal_python_projects

./: README.md
BioSQL/: .gitignore  README.md  pyproject.toml
BioSQL/datas/: bio.db
BioSQL/src/: analysis.py  bio.sql  cli.py  db.py  graph_utils.py
BioSQL/src/db/: bio.db
BioSQL/tests/: test_analysis.py
Biofile_manager/: README.md  pyproject.toml
Biofile_manager/datas/: example.fasta  example.fastq
Biofile_manager/src/biofile_manager/: cli.py  main.py
Biofile_manager/src/biofile_manager/parsers/: fasta_parser.py  fastq_parser.py
Biofile_manager/src/biofile_manager/utils/: export.py  filters.py  stats.py
Biofile_manager/tests/: test_fastq_parser.py  test_parser_fasta.py
Fasta_files_analysis/: .gitignore  README.md  pyproject.toml
Fasta_files_analysis/datas/: README.md  simple_fasta.fa
Fasta_files_analysis/src/fast_files_analysis/: main.py  main_ranners.py  pathes.py  ranners.py
Fasta_files_analysis/src/fast_files_analysis/identification_and_analysis/finding_all_rnas/: Loading_and_extracting_columns.py  extract_and_save_all_rnas.py
Fasta_files_analysis/src/fast_files_analysis/identification_and_analysis/finding_all_rnas/datas/: rna_types.py
Fasta_files_analysis/src/fast_files_analysis/identification_and_analysis/gene_and_regulatory_element_annotation/: analyze_fasta.py  find_motifs.py  find_orfs.py  iupac_to_regex.py  runner.py
Fasta_files_analysis/src/fast_files_analysis/identification_and_analysis/gene_and_regulatory_element_annotation/datas/: IUPAC_codes.py
Fasta_files_analysis/src/fast_files_analysis/identification_and_analysis/repeat_regions_and_interspersed_repeats/: famous_repetitive_sequences.py  kmp_algorithm.py  read_fasta.py  runner.py  sequence_search_and_calculate.py
Fasta_files_analysis/src/fast_files_analysis/parts/finding_all_rnas/: extract_and_save_all_rnas.py  read_fasta.py  runner.py
Fasta_files_analysis/src/fast_files_analysis/parts/gene_and_regulatory_element_annotation/: find_motifs.py  iupac_to_regex.py  regulatory_element_patterns.py  runner.py  translate_orf.py
Fasta_files_analysis/src/fast_files_analysis/parts/repeat_regions_and_interspersed_repeats/: sequence_search_and_calculate.py
Fasta_files_analysis/src/fast_files_analysis/parts/repeat_regions_and_interspersed_repeats/datas/: famous_repetitive_sequences.py
Fasta_files_analysis/src/fast_files_analysis/raw_file_purification/: cleaning_sequence.py  hash_seq.py  process_fasta.py
GCDMS/: .gitignore  README.md  file::memory:  pyproject.toml  test.db
GCDMS/docs/: ER.txt
GCDMS/src/gcdms/: auth.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
GCDMS/src/gcdms/api/: analysis_results.py  auth.py  clinical_records.py  files.py  genetic_samples.py  genetic_variants.py  patients.py  users.py
GCDMS/src/gcdms/crud/: analysis_result.py  clinical_record.py  genetic_sample.py  genetic_variant.py  patient.py  user.py
GCDMS/src/gcdms/models/: analysis_result.py  clinical_record.py  genetic_sample.py  genetic_variant.py  patient.py  user.py
GCDMS/src/gcdms/schemas/: analysis_result.py  clinical_record.py  genetic_sample.py  genetic_variant.py  patient.py  user.py
GCDMS/tests/: conftest.py  test_auth.py  test_patients.py  test_records.py  test_results.py  test_samples.py  test_users.py  test_variants.py
GCDMS/ui/: package-lock.json  package.json
GCDMS/ui/src/: App.jsx
GC_content_calculator/: README.md  pyproject.toml
GC_content_calculator/datas/: Sample.fasta  Sample.fastq
GC_content_calculator/src/: app.py
GC_content_calculator/src/gc_content_calculator/: app.py
GC_content_calculator/src/gc_content_calculator/utils/: gc_calculator.py
GC_content_calculator/tests/: test_gc_calculator.py
GC_content_calculator/utils/: gc_calculator.py  io_helper.py
Gene_expression_analysis_script/: .gitignore  README.md  pyproject.toml
Gene_expression_analysis_script/datas/CSV_files/: gene_expression_data.csv
Gene_expression_analysis_script/src/gene_expression_analysis_script/: main.py
