[tool.poetry]
name = "biosql"
version = "0.1.0"
description = "Building a full-fledged project to perform operations on DNA sequences"
authors = ["Donyaee-Aliasghar <donyaeealiasghar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^14.0.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
