[tool.poetry]
name = "biofile-manager"
version = "0.1.0"
description = "Managed bioinformatics files"
authors = ["Donyaee-Aliasghar <donyaeealiasghar@gmail.com>"]
readme = "README.md"
packages = [{include = "Biofile_manager", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
