[tool.poetry]
name = "fasta-files-analysis"
version = "0.1.0"
description = ""
authors = ["Donyaee-Aliasghar <donyaeealiasghar@gmail.com>"]
readme = "README.md"
packages = [{include = "fasta_files_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
