[tool.poetry]
name = "gcdms"
version = "0.1.0"
description = "Genetic and clinical data management system"
authors = ["Donyaee-Aliasghar <donyaeealiasghar@gmail.com>"]
readme = "README.md"
packages = [{include = "gcdms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
databases = "^0.9.0"
pydantic = "^2.11.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
alembic = "^1.16.2"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
