[tool.poetry]
name = "gcdms"
version = "0.1.0"
description = "Genetic and clinical data management system"
authors = ["Donyaee-Aliasghar <donyaeealiasghar@gmail.com>"]
readme = "README.md"
packages = [{include = "gcdms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
databases = "^0.9.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
alembic = "^1.16.2"
python-dotenv = "^1.1.1"
biopython = "^1.85"
pysam = "^0.23.3"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
