[project]
name = "gc-content-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Donyaee-Aliasghar",email = "donyaeealiasghar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "gc_content_calculator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
