[tool.poetry]
name = "gc-content-calculator"
version = "0.1.0"
description = ""
authors = ["Donyaee-Aliasghar <donyaeealiasghar@gmail.com>"]
readme = "README.md"
packages = [{ include = "gc_content_calculator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
biopython = "^1.81"
streamlit = "^1.24.0"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
